--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-native": "^0.74.3",
+    "react-native-web": "^0.19.12",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
